--- a/src/css/Add.css
+++ b/src/css/Add.css
@@ -14,14 +14,27 @@
 
 .data-title, .advanced-title{
     margin: 0;
-    margin-left: 15px;
+    margin-top: 15px;
     font-size: 2.5em;
 
     text-transform: lowercase;
+    user-select: none;
 }
 
-.add .key-pairs .input-key-pair{
-    margin-bottom: 10px;
+.add .key-pairs .input-key-pair, .advanced .input-field{
+    margin-bottom: 15px;
+}
+
+.data-fields, .advanced-fields, .info-data{
+    position: relative;
+    padding: 0 25px;
+}
+
+.add .data-fields:empty::after{
+    content: "No data inserted";
+    font-size: 1.3em;
+    opacity: 0.7;
+    font-family: "Poppins";
 }
 
 .advanced-title{
@@ -30,4 +43,5 @@
    justify-content: flex-start;
 
    cursor: pointer;
+   width: 250px;
 }
