--- a/src/css/Page.css
+++ b/src/css/Page.css
@@ -1,7 +1,8 @@
 .dashboard{
     position: relative;
 
-    background-color: burlywood;
+    background-color: black;
+    color: white;
     padding: 0 25px;
     padding-top: 15%;
 
@@ -25,7 +26,8 @@
     font-size: 1.25em;
     margin-bottom: 15px;
 
-    border: 1px solid black;
+    border: 1px solid white;
+    color: white;
     background-color: transparent;
     padding: 5px 20px;
     border-radius: 10px;
@@ -38,7 +40,7 @@
 }
 
 .dashboard button:hover{
-    color: white;
+    color: black;
     transition: all 0.5s 0.3s;
 }
 
@@ -57,7 +59,7 @@
     height: 100%;
     border-radius: 10px;
 
-    background-color: black;
+    background-color: white;
 
     transition: all 0.5s;
     z-index: -1;
@@ -68,7 +70,7 @@
 }
 
 .dashboard button:disabled{
-    color: black;
+    color: inherit;
     opacity: 0.5;
     cursor: default;
 }
@@ -79,7 +81,7 @@
 
 .info{
     padding: 10%;
-    background-color: violet;
+    background-color: rgb(233, 233, 233);
     box-sizing: border-box;
 }
 
@@ -88,4 +90,8 @@
     bottom: 50px;
     left: 50%;
     transform: translateX(-50%);
+}
+
+.spinner div{
+    background-color: rgb(252, 73, 162) !important;
 }
