--- a/src/css/Page.css
+++ b/src/css/Page.css
@@ -1,12 +1,33 @@
+body{
+    background-color: rgb(233, 233, 233);
+}
+
 .dashboard{
     position: relative;
 
-    background-color: black;
+    background-color: transparent;
     color: white;
     padding: 0 25px;
     padding-top: 15%;
 
     box-sizing: border-box;
+    z-index: 1;
+}
+
+.dashboard::before{
+    content: "";
+    position: absolute;
+    top:0;
+    left:0;
+    bottom: 0;
+
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    transform-origin: left;
+    z-index: -1;
+
+    animation: grow 0.6s ease-out forwards;
 }
 
 .dashboard .name{
@@ -16,6 +37,9 @@
     line-height: 90px;
 
     margin-bottom: 25px;
+    opacity: 0;
+
+    animation: show-up 0.5s ease-out 0.3s forwards;
 }
 
 .dashboard button{
@@ -37,6 +61,9 @@
     cursor: pointer;
 
     transition: opacity 0.5s;
+    opacity: 0;
+
+    animation: show-up 0.5s ease-out 0.5s forwards;
 }
 
 .dashboard button:hover{
@@ -71,8 +98,10 @@
 
 .dashboard button:disabled{
     color: inherit;
-    opacity: 0.5;
+    opacity: 0;
     cursor: default;
+
+    animation: show-up-disabled 0.5s ease-out 0.5s forwards;
 }
 
 .dashboard button:disabled:hover::before{
@@ -80,9 +109,11 @@
 }
 
 .info{
+    opacity: 0;
     padding: 10%;
-    background-color: rgb(233, 233, 233);
     box-sizing: border-box;
+
+    animation: show-info 0.5s ease-out 0.7s forwards;
 }
 
 .spinner{
@@ -94,4 +125,46 @@
 
 .spinner div{
     background-color: rgb(252, 73, 162) !important;
+}
+
+@keyframes grow{
+    from{
+        transform: scaleX(0);
+    }
+    to{
+        transform: scaleX(1);
+    }
+}
+
+@keyframes show-up{
+    from{
+        transform: translateY(50px);
+        opacity: 0;
+    }
+    to{
+        transform: translateY(0px);
+        opacity: 1;
+    }
+}
+
+@keyframes show-up-disabled{
+    from{
+        transform: translateY(50px);
+        opacity: 0;
+    }
+    to{
+        transform: translateY(0px);
+        opacity: 0.5;
+    }
+}
+
+@keyframes show-info{
+    from{
+        margin-top: 25px;
+        opacity: 0;
+    }
+    to{
+        margin-top: 0px;
+        opacity: 1;
+    }
 }
